tests/NormalTests/paczka2/big_fuzzy/84768617.err
Error in line 3: 0Y0 A233 82,1
Error in line 15: 0Y0 A972 16,2
Error in line 25: 0Y0 A233 13,2
Error in line 38: tBk1qK A972 189,3
Error in line 43: tBk1qK S679 26,9
Error in line 40: 0Y0 S679 53,0
Error in line 60: OPd7a5lJ A972 163,4
Error in line 63: OPd7a5lJ A804 60,1
Error in line 64: OPd7a5lJ S679 52,5
Error in line 58: tBk1qK A233 56,1
Error in line 42: h7eYp A233 18,1
Error in line 82: 0Y0 A233 149,0
Error in line 87: S679 S679 20,8
Error in line 95: OPd7a5lJ A804 368,4
Error in line 104: h7eYp A804 18,4
Error in line 109: h7eYp A233 321,20
Error in line 97: 0Y0 A233 59,8
Error in line 106: h7eYp A233 75,0
Error in line 105: tBk1qK A804 65,1
Error in line 110: 0Y0 A972 55,3
Error in line 126: UUX0ZIfy A804 96,2
Error in line 137: UUX0ZIfy A233 41,7
Error in line 116: S679 A233 43,8
Error in line 143: OPd7a5lJ A972 73,8
Error in line 147: RvJWhC6S6W A804 3,1
Error in line 148: RvJWhC6S6W S679 28,0
Error in line 146: OPd7a5lJ S679 23,4
Error in line 149: RvJWhC6S6W A804 56,8
Error in line 153: tBk1qK S679 36,0
Error in line 152: S679 S679 61,1
Error in line 158: 0Y0 A233 85,2
Error in line 166: S679 A804 89,8
Error in line 206: OPd7a5lJ S679 -3,2
Error in line 208: UUX0ZIfy A233 2,5
Error in line 213: OPd7a5lJ S679 35,3
Error in line 210: RvJWhC6S6W A804 98,4
Error in line 205: h7eYp A233 24,0
Error in line 226: RvJWhC6S6W S679 20,7
